--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ o v1.5.1 (2024.06.13)
   - libusb-win32 ARM64 driver installation support (courtesy of Peter Dons Tychsen)
   Bugfixes:
   - fix filter installer being potentially overwritten (courtesy of Peter Dons Tychsen)
+  - fix UAC not being properly triggered during driver installation (courtesy of Andrew Meyer)
   Improvements:
   - improve Windows edition and platform reporting
 
